security-strategy/restrict-communications-to-pod/mysql/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress-mysql
  namespace: network-policy-ns
  labels:
    app: mysql
spec:
  containers:
  - name: mysql
    image: mysql:8.2.0
    ports:
    - containerPort: 3306
      name: mysql
