security-strategy/restrict-communications-to-pod/mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  namespace: network-policy-ns
  labels:
    app: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
